reset z-index on site-ball, fixed drop down width on mobile.

--- a/_src/screen.scss
+++ b/_src/screen.scss
@@ -167,7 +167,7 @@ header {
 .nav-link-mod {
 	display: none;
 	background-color: #2c2c2c;
-	min-width: 330px;
+	min-width: 275px;
 	display: none;
 	float: right;
 
@@ -469,16 +469,20 @@ header {
 /* ============================================= */
 
 #about {
-	padding: 60px 20px 40px 20px;
+	padding: 100px 20px 40px 20px;
 	background-color: #14A798;
 	position: relative;
 
-	@media (min-width: 760px) {
-		padding-top: 100px;
+	@media (min-width: 600px) {
+		padding-top: 120px;
 	}//mq
 
 	@media (min-width: 900px) {
 		padding: 150px 20px 40px 20px;
+	}//mq
+
+	@media (min-width: 1300px) {
+		padding: 200px 20px 40px 20px;
 	}//mq
 }//about
 
@@ -537,10 +541,10 @@ header {
 
 .absolute-ball {
 	position: absolute;
-	// bottom: 43%;
 	top: 0;
 	left: 0;
-	z-index: 1000;
+	z-index: 2;
+	pointer-events: none;
 }
 
 .call-to-action {
